@@ -431,7 +431,15 @@ namespace cYo.Projects.ComicRack.Viewer.Config
 			set;
 		}
 
-		public ExtendedSettings()
+        [DefaultValue(false)]
+        [CommandLineSwitch(ShortName = "local")]
+        public bool UseLocalSettings 
+		{ 
+			get; 
+			set; 
+		}
+
+        public ExtendedSettings()
 		{
 			AnamorphicScalingTolerance = 0.25f;
 			KeyboardZoomStepping = 0.5f;
@@ -449,6 +457,6 @@ namespace cYo.Projects.ComicRack.Viewer.Config
 			QueryCacheMode = QueryCacheMode.InstantUpdate;
 			MacCompatibleScanning = true;
 			SortNetworkFolders = true;
-		}
+        }
 	}
 }
