@@ -3,6 +3,7 @@ Community Edition Build 0.9.180:
 * NEW: RAR5 Support (Default & SharpCompress)
 * NEW: Added links to The Organizer guide to the online manual help system
 * NEW: Added the Git version to the Splash Screen, to more easily find bug in specific releases.
+* NEW: Added the "-local" command line switch, to have the program load on portable mode.
 
 * CHANGE: Updated the Splash Screen and Renamed the Program to Community Edition, this means that a new config folder will be used %appdata%\cYo\ComicRack Community Edition. 
 * CHANGE: Removed everything to do with Validation/Donation/PayPal
